--- a/semester-project/my-app/app/components/PostClosed/PostClosed.css
+++ b/semester-project/my-app/app/components/PostClosed/PostClosed.css
@@ -27,7 +27,7 @@
   transform: scale(1);
   box-shadow: 0px 0px 0px;
 }
-.title {
+.postTitle {
   margin-top: 15px;
 }
 @media screen and (max-width: 1000px) {
