--- a/semester-project/my-app/app/fans/fans.css
+++ b/semester-project/my-app/app/fans/fans.css
@@ -1,6 +1,7 @@
-.mainTitle{
+.title{
     margin-top: 10px;
     margin-bottom: 65px;
+    font-size: 30px;
 }
 .subpageElements{
     /* border-color: red;
@@ -21,21 +22,21 @@
     width: 30rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     padding-top: 90px; /*u custom button je margin bottom 60px ,
                         pa poremeti sve pa sam ovako rucno*/
     margin: 0;
     padding-right: 30px;
     padding-left: 30px;
     padding-bottom: 30px;
-    gap: 20px;
+    gap: 40px;
     font-weight: 500;
     background-color: var(--darker-background);
     border-radius: 10%;
 }
 
 @media only screen and (max-width: 1100px){
-    .mainTitle{
+    .title{
         margin-top: 100px;
         text-align: center;
     }
@@ -47,7 +48,7 @@
 
 @media only screen and (max-width: 900px){
 
-    .mainTitle{
+    .title{
         margin-bottom: -5px;
     }
     .subpageElements{
